# CallMeMaybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/edge_cases/: edge_cases.json
data/nested_input/: nested_function_calling_tests.json  nested_functions_definition.json
src/: README.md  __main__.py  main.py  parser.py  tokenizer.py
src/engine/: README.md  __init__.py  classifier.py  engine.py  extractor.py  nested_extractor.py  postprocessor.py  trie.py
src/formatter/: README.md  __init__.py  few_shot.json  formatter.py
src/formatter/few_shot/: fn_add_numbers.json  fn_book_flight.json  fn_calculate_distance.json  fn_create_user_profile.json  fn_get_square_root.json  fn_greet.json  fn_reverse_string.json  fn_substitute_string_with_regex.json
src/parser/: README.md  __init__.py  parser.py
src/parser/models/: __init__.py  function_call_result.py  function_definition.py  function_parameters.py  function_property.py
src/tokenizer/: README.md  tokenizer.py
src/utils/: __init__.py  formatter.py  utils.py
src/visualizer/: README.md  visualizer.py
tests/: __main__.py  test_tokenizer.py
tests/edge_cases/: tester.py
tests/input_validation/: test_inputs.py  tester.py
tests/nested_parameters/: tester.py
tests/output_validation/: test_outputs.py  tester.py
tests/standard_batch/: tester.py
tests/test_parsing/parsing_tests/: function_calls.json
